Added update account information

--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "start": "node index.js",
     "dev": "npm i && nodemon index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "restore-dev-db": "mysql -u root -p carfin < ./db-backup/carfin.sql"
   },
   "keywords": [
     "car",
