--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.837.0",
+    "@aws-sdk/s3-request-presigner": "^3.837.0",
     "bcrypt": "^5.1.1",
     "bootstrap-icons": "^1.13.1",
     "cors": "^2.8.5",
@@ -27,6 +29,7 @@
     "express-validator": "^7.2.1",
     "jsonwebtoken": "^9.0.2",
     "moment": "^2.30.1",
+    "multer": "^2.0.1",
     "mysql2": "^3.14.1",
     "uuid": "^11.1.0",
     "winston": "^3.17.0",
