--- a/package.json
+++ b/package.json
@@ -31,11 +31,14 @@
     "moment": "^2.30.1",
     "multer": "^2.0.1",
     "mysql2": "^3.14.1",
+    "nodemailer": "^7.0.3",
+    "stripe": "^18.2.1",
     "uuid": "^11.1.0",
     "winston": "^3.17.0",
     "winston-syslog": "^2.7.1"
   },
   "devDependencies": {
+    "axios": "^1.10.0",
     "nodemon": "^3.1.0"
   }
 }
