--- a/.gitignore
+++ b/.gitignore
@@ -1,28 +1,69 @@
+# Dependencies
+backend/node_modules/
+frontend/node_modules/
+backend/npm-debug.log*
+frontend/npm-debug.log*
+backend/yarn-debug.log*
+frontend/yarn-debug.log*
+backend/yarn-error.log*
+frontend/yarn-error.log*
+
+# Environment variables
+backend/.env
+frontend/.env
+backend/.env.local
+frontend/.env.local
+backend/.env.development.local
+frontend/.env.development.local
+backend/.env.test.local
+frontend/.env.test.local
+backend/.env.production.local
+frontend/.env.production.local
+
+# Config files with sensitive data
+backend/config/config.json
+
 # Logs
-logs
+backend/logs/
+frontend/logs/
 *.log
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-lerna-debug.log*
+
+# Build directories
+frontend/dist/
+frontend/build/
+
+# Coverage
+backend/coverage/
+frontend/coverage/
+
+# OS generated files
+.DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+Thumbs.db
+
+# IDE files
+.vscode/
+.idea/
+*.sublime-project
+*.sublime-workspace
+
+# Temporary files
+*.tmp
+*.temp
 
 # Configs
 config/config.json
 
 # Dependency directories
-node_modules/
 jspm_packages/
 
 # dotenv environment variables file
 .env
 .env.test
-
-# Build / generate output
-dist/
-build/
-
-# Coverage directory used by tools like istanbul
-coverage/
 
 # Optional npm cache directory
 .npm
@@ -30,11 +71,6 @@ coverage/
 # Optional eslint cache
 .eslintcache
 
-# OS specific
-.DS_Store
-
 # IDE specific
-.idea/
-.vscode/
 *.swp
 *.swo 
