--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -42,14 +42,19 @@ jobs:
     if: ${{ needs.detect-changes.outputs.website == 'true' || needs.detect-changes.outputs.frontend == 'true' || needs.detect-changes.outputs.backend == 'true' || needs.detect-changes.outputs.caddy == 'true' || needs.detect-changes.outputs.deploy-scripts == 'true' }}
     
     steps:
-      - name: Deploy to VPS
-        uses: appleboy/ssh-action@v1.0.3
+      - name: Setup SSH Key
+        uses: shimataro/ssh-key-action@v2
         with:
-          host: ${{ secrets.VPS_HOST }}
-          username: ${{ secrets.VPS_USER }}
           key: ${{ secrets.VPS_SSH_KEY }}
-          port: ${{ secrets.VPS_PORT || 22 }}
-          script: |
+          known_hosts: ${{ secrets.VPS_HOST }}
+          
+      - name: Add known hosts
+        run: |
+          ssh-keyscan -H ${{ secrets.VPS_HOST }} >> ~/.ssh/known_hosts
+          
+      - name: Deploy to VPS
+        run: |
+          ssh -o StrictHostKeyChecking=no ${{ secrets.VPS_USER }}@${{ secrets.VPS_HOST }} << 'EOF'
             echo "🚀 Starting deployment..."
             echo "Changes detected:"
             echo "  Website: ${{ needs.detect-changes.outputs.website }}"
@@ -65,17 +70,14 @@ jobs:
               --backend=${{ needs.detect-changes.outputs.backend }} \
               --caddy=${{ needs.detect-changes.outputs.caddy }} \
               --deploy-scripts=${{ needs.detect-changes.outputs.deploy-scripts }}
+          EOF
 
       - name: Health Check
-        uses: appleboy/ssh-action@v1.0.3
-        with:
-          host: ${{ secrets.VPS_HOST }}
-          username: ${{ secrets.VPS_USER }}
-          key: ${{ secrets.VPS_SSH_KEY }}
-          port: ${{ secrets.VPS_PORT || 22 }}
-          script: |
+        run: |
+          ssh -o StrictHostKeyChecking=no ${{ secrets.VPS_USER }}@${{ secrets.VPS_HOST }} << 'EOF'
             cd /var/www/carledgr
             ./server-deployment/health-check.sh
+          EOF
 
       - name: Notify Success
         if: success()
