Move Caddyfile and service files to server-deployment directory
- Moved Caddyfile, carledgr-demo.service, and carledgr-prod.service to server-deployment/
- Updated all references in deploy scripts, workflows, and documentation
- Modified deploy.sh to use files from repo instead of inline creation
- Updated GitHub workflow to detect changes in new Caddyfile location

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -32,7 +32,7 @@ jobs:
             backend:
               - 'backend/**'
             caddy:
-              - 'Caddyfile'
+              - 'server-deployment/Caddyfile'
             deploy-scripts:
               - 'server-deployment/**'
 
@@ -94,8 +94,4 @@ jobs:
           echo "🚀 App: https://app.carledgr.com"
           echo "🧪 Demo: https://demo.carledgr.com"
 
-      - name: Notify Failure
-        if: failure()
-        run: |
-          echo "❌ Deployment failed!"
-          echo "Check the logs above for details." 
+ 
