Fixed UI issues

--- a/website/config.json
+++ b/website/config.json
@@ -1,14 +1,15 @@
 {
   "api": {
-    "baseUrl": "http://demo-api.carledgr.com/api",
+    "baseUrl": "https://demo-api.carledgr.com/api",
     "endpoints": {
       "plans": "/subscriptions/plans",
-      "checkout": "/subscriptions/checkout"
+      "checkout": "/subscriptions/checkout",
+      "checkOrgName": "/organizations/check-name"
     }
   },
   "app": {
-    "successUrl": "http://carledgr.com/success.html",
-    "cancelUrl": "http://carledgr.com/cancel.html",
+    "successUrl": "https://carledgr.com/success.html",
+    "cancelUrl": "https://carledgr.com/cancel.html",
     "demoUrl": "https://demo.carledgr.com"
   }
 }
