--- a/backend/package.json
+++ b/backend/package.json
@@ -31,6 +31,7 @@
     "multer": "^2.0.1",
     "mysql2": "^3.14.1",
     "nodemailer": "^7.0.3",
+    "resend": "^4.0.1",
     "stripe": "^18.2.1",
     "uuid": "^11.1.0",
     "winston": "^3.17.0",
