--- a/server-deployment/carledgr-prod.service
+++ b/server-deployment/carledgr-prod.service
@@ -5,14 +5,15 @@ After=network.target
 [Service]
 Type=simple
 User=deploy
+Group=deploy
 WorkingDirectory=/var/www/carledgr/backend
 Environment=NODE_ENV=production
+Environment=CL_BACKEND_CONFIG_FILE=/etc/carledgr-demo/config.json
 Environment=PATH=/home/deploy/.nvm/versions/node/v22.17.0/bin:/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin
-Environment=CL_BACKEND_CONFIG_FILE=/etc/carledgr/config.json
 ExecStart=/home/deploy/.nvm/versions/node/v22.17.0/bin/node index.js
 Restart=always
 RestartSec=5
-StandardOutput=append:/var/log/carledgr/backend-output.log
+StandardOutput=append:/var/log/carledgr/backend.log
 StandardError=append:/var/log/carledgr/backend-error.log
 
 [Install]
