Add database SSL support and connection limit improvements
- Add SSL field to config.example.json and config loader
- Update database connection to support SSL configuration
- Move db-backup tools to server-deployment/db-backup/
- Improve connection limit defaults (10 for general use)
- Add environment variable support for DB_SSL setting
- Enhanced database sync script with progress feedback and error handling

--- a/.gitignore
+++ b/.gitignore
@@ -22,6 +22,7 @@ frontend/.env.production.local
 
 # Config files with sensitive data
 backend/config/config.json
+server-deployment/db-backup/db-config.json
 
 # Logs
 backend/logs/
