--- a/backend/config/config.example.json
+++ b/backend/config/config.example.json
@@ -11,7 +11,8 @@
     "user": "root",
     "password": "rootpass",
     "database": "carfin",
-    "connectionLimit": 2
+    "connectionLimit": 10,
+    "ssl": false
   },
   "stripe": {
     "secretKey": "",
