Add comprehensive Google Analytics tracking implementation
- Add Google Analytics Global Site Tag (gtag) to all pages
- Implement comprehensive event tracking for user interactions:
  * Demo button clicks with conversion tracking
  * Pricing plan interactions and checkout events
  * Language change tracking
  * Navigation and mobile menu usage
  * Form interactions and modal events
  * Section engagement and scroll tracking
- Add purchase tracking on success page
- Add checkout abandonment tracking on cancel page
- Create setup-analytics.js script for easy configuration
- Update config.json with analytics configuration structure
- Track conversions, ecommerce events, and user journey

--- a/website/config.json
+++ b/website/config.json
@@ -11,5 +11,11 @@
     "successUrl": "https://carledgr.com/success.html",
     "cancelUrl": "https://carledgr.com/cancel.html",
     "demoUrl": "https://demo.carledgr.com"
+  },
+  "analytics": {
+    "googleAnalytics": {
+      "measurementId": "G-R2ZRM29Y1K",
+      "enabled": true
+    }
   }
 }
