--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,13 +9,16 @@
     "preview": "vite preview"
   },
   "devDependencies": {
-    "vite": "^6.3.5",
-    "@vitejs/plugin-react": "^4.2.1"
+    "@vitejs/plugin-react": "^4.2.1",
+    "vite": "^6.3.5"
   },
   "dependencies": {
     "@material/web": "^2.3.0",
-    "vin-validator": "^1.0.0",
+    "chart.js": "^4.5.0",
+    "chartjs-plugin-datalabels": "^2.2.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-chartjs-2": "^5.3.0",
+    "react-dom": "^18.2.0",
+    "vin-validator": "^1.0.0"
   }
 }
