Temporarily revert to demo API until production API gets live Stripe price IDs

--- a/website/config.json
+++ b/website/config.json
@@ -1,6 +1,6 @@
 {
   "api": {
-    "baseUrl": "https://api.carledgr.com/api",
+    "baseUrl": "https://demo-api.carledgr.com/api",
     "endpoints": {
       "plans": "/subscriptions/plans",
       "checkout": "/subscriptions/checkout",
