--- a/.gitignore
+++ b/.gitignore
@@ -30,6 +30,7 @@ frontend/.env.production.local
 
 # Config files with sensitive data
 backend/config/config.json
+backend/config/prod-config.json
 server-deployment/db-backup/db-config.json
 
 # Logs
